Overlapping issue for Change passowrd fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2248,7 +2248,9 @@ input:-internal-autofill-selected {
   box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px,
     rgb(60 64 67 / 15%) 0px 2px 6px 2px; */
 }
-
+.selftGift-tab .nav-item{
+  overflow: hidden;
+}
 .selftGift-tab .nav-item .nav-link {
   display: inline-block;
   padding: 1rem 2rem;
@@ -5275,6 +5277,9 @@ video {
   right: 15px;
   left: auto;
 }
+.accordion-item:first-of-type .accordion-button{
+  border-radius: 0;
+}
 @media screen and (max-width:1600px) {
   .nav-list .nav-item a.nav-link {
     font-size: 1rem;
@@ -5505,6 +5510,9 @@ video {
   .all-form-wrap h5{
     font-size: 1rem;
   }
+  .admin-maindiv .padding30{
+    padding: 20px;
+  }
 }
 
 @media only screen and (max-width: 991px) {
@@ -5714,6 +5722,7 @@ video {
   .open-nav .leftmenu-main aside{
     transform: translateX(0);
     animation: transform 0.5ms ease-in 0.5ms;
+    z-index: 99;
   }
 }
 
